--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -472,7 +472,8 @@ void main(){
 3. 函数const（参数const和返回值const）  
     - 函数参数const
         -  void print (const int a); //a在函数体print内不能被修改
-        -  void print (int *const a); //指针a在函数体print内不能重赋值
+        -  void print (int *const a); //指针a在函数体print内不能重赋值  
+        -  void print (const int *a,int* b); //a和b指向相同的地址，a不能修改a指向的地址值，但是b可以
         -  自定义类型的参数传递，需要临时对对象复制参数，对于临时对象的复制，需要调用构造函数，比较浪费时间，因此采用const外加引用传递的方式。  
     - 函数返回值const
         - const int print();  //修饰内置类型与不修饰作用一致
@@ -1202,3 +1203,4 @@ a4_2:   4153600
 */
 
 ```
+
