--- a/_posts/2019-09-22-编程思维.md
+++ b/_posts/2019-09-22-编程思维.md
@@ -23,6 +23,135 @@ tags: 方法论
 
 动态规划算法思想（分治思想和解决冗余）：一个问题拆解各种`更小的相似的`子问题，子问题求解获得原问题解；子问题结果保存，同子问题再次出现无需再次求解，直接引用保存的子问题结果。
 
+#### 给定字符串，输出可能的各种排列
+
+**递归实现**：  
+非去重排列：由第1个值开始分别与后面的值一一兑换获得新的排列，如1234，1跟2兑换得到2134，2134固定2后134继续递归排列，固定第2个位置...（未考虑到值一样的）  
+
+```cpp
+#include<iostream>
+
+void swap(char* c_1,char*c_2){
+    if ((c_1 == NULL) || (c_2 == NULL) || (c_1 == c_2)){ return; }
+    char c_char = *c_1;
+    *c_1 = *c_2;
+    *c_2 = c_char;
+}
+
+//pos fixed
+void GetStringArrange(char* pStr,char* pBegin){
+    if(pStr == NULL){ return; }
+
+    if(*pBegin == '\0'){
+        std::cout << pStr << std::endl;
+    }
+    else{
+        for(char* pCh = pBegin;*pCh != '\0';++pCh){
+            swap(pBegin,pCh);
+            GetStringArrange(pStr,pBegin + 1);
+            swap(pBegin,pCh);  //再次转换保留原始字符串
+        }
+    }
+}
+
+int main(){
+
+    char arry[5] = "abcd";
+
+    GetStringArrange(arry,arry);
+
+
+    return 0;
+}
+```
+
+去重排列：在非去重的基础上，第1个值分别与它后面的没有重复出现的值交换（重复出现代表会一样）  
+
+```cpp
+#include<iostream>
+#include<stdio.h>
+#include<string.h>
+#include<assert.h>
+
+template<class T>
+void Swap(T* Tva,T* Tvb){
+    T tmp = *Tva;
+    *Tva = *Tvb;
+    *Tvb = tmp;
+}
+
+void Reverse(char* pBegin,char* pEnd){
+    while(pBegin < pEnd){
+        Swap(pBegin++,pEnd--);
+    }
+}
+
+bool GetNextArrange(char* pTarg){
+    char* pEnd = pTarg + strlen(pTarg) - 1;
+    char* pFir = pEnd;
+    char* pSec = pEnd;
+
+    for(;pSec > pTarg;--pFir){
+        if(*pFir < *pSec){
+
+            //Get behind little big
+            char* pMax = pSec;
+            for(char* ptr = pEnd;ptr > pFir;--ptr){
+                if(*ptr > *pFir && *ptr < *pMax){
+                    pMax = ptr;
+                }
+            }
+
+            Swap(pFir,pMax);
+            Reverse(pSec,pEnd);
+            return true;
+        }
+        else{
+            if(pFir != pEnd){
+                --pSec;
+            }
+        }
+    }
+
+    return false;
+}
+
+void GetStringArrange(const char* pSour,char* pTarg){
+    assert(pSour && pTarg);
+	if(strlen(pSour) <= 1){ return; }
+
+    do{
+        static int iNum = 0;
+        std::cout << "iNum " << ++iNum << ":" << pSour << std::endl;
+    }while(GetNextArrange(pTarg));
+}
+
+int main(){
+
+    char arry[] = "1234";
+    GetStringArrange(arry,arry);
+
+    return 0;
+}
+
+```
+
+
+**非递归实现**：
+
+![全排列算法]()
+
+算法的思路：  
+1.不断寻找下一个排列（起始排列需要是从小到大，反过来的下面步骤比较要相反）例如：1234    
+2.从右边向左边寻找第一个升序（1234对应的是34），3所在的位置是替换位    
+3.从替换位开始从左往后找到替换位后面“大于替换位的最小值”（1234对应的34的替换位3之后大于替换位的最小值是4）  
+4.替换位替换后，把替换位之后的所有数据反转（得到比当前排列大的最小的序列），此处替换位之后是4，反转后还是4，最终结果是1234  
+5.不断寻找下一个排列，直到头  
+
+<https://blog.csdn.net/hackbuteer1/article/details/7462447#>  
+<https://blog.csdn.net/cpfeed/article/details/7376132>  
+
+
 ### <span id = "list_2"></span>类兔乌龟赛跑思路  
 
 类兔乌龟赛跑的思路就是2个对象先后跑的问题：  
@@ -166,3 +295,69 @@ a = a ^ 123 ^ 123;  //结果为a
 2.一个数A异或自己奇数次为0，异或偶数次还是自己A  
 int a = 11;
 a = a ^ a;  //结果为0
+
+
+
+```cpp  
+//排列递归实现
+#include<iostream>
+#include<stdio.h>
+#include<string.h>
+
+void swap(char* c_1,char*c_2){
+    if ((c_1 == NULL) || (c_2 == NULL) || (c_1 == c_2)){ return; }
+    char c_char = *c_1;
+    *c_1 = *c_2;
+    *c_2 = c_char;
+}
+
+bool IsSameRange(char* pBegin,char* pEnd){
+    for(char* ptr = pBegin;ptr < pEnd;++ptr){
+        if(*pBegin == *pEnd){
+            return false;
+        }
+    }
+
+    return true;
+}
+
+
+void GetStringArrange(const char* pSour,char* pTarg){
+    if (pSour == NULL || pTarg == NULL){ return; }
+
+    if (*pTarg == '\0'){
+        std::cout << pSour << std::endl;
+        return;
+    }
+
+    for(char *ptr = pTarg;*ptr != '\0';++ptr){
+        if (IsSameRange(pTarg,ptr)){
+            swap(pTarg,ptr);
+            GetStringArrange(pSour,pTarg + 1);
+            swap(pTarg,ptr);
+        }
+    }
+}
+
+void StringArrange(const char* pSour){
+    if (pSour == NULL){ return; }
+
+    char* temp = new char[strlen(pSour)];
+    strncat(temp,pSour,strlen(pSour));
+
+    GetStringArrange(temp,temp);
+
+    delete[] temp;
+    temp = NULL;
+}
+
+int main(){
+
+    char arry[4] = "bbc";
+//  StringArrange(arry);
+    GetStringArrange(arry,arry);
+
+
+    return 0;
+}
+```
