--- a/_posts/2019-09-22-编程思维.md
+++ b/_posts/2019-09-22-编程思维.md
@@ -67,6 +67,19 @@ int main(){
 
 去重排列：在非去重的基础上，第1个值分别与它后面的没有重复出现的值交换（重复出现代表会一样）  
 
+
+**非递归实现**：
+
+![全排列算法](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%85%A8%E6%8E%92%E5%88%97%E7%AE%97%E6%B3%95.png)
+
+算法的思路：  
+1.不断寻找下一个排列（起始排列需要是从小到大，反过来的下面步骤比较要相反）例如：1234    
+2.从右边向左边寻找第一个升序（1234对应的是34），3所在的位置是替换位    
+3.从替换位开始从左往后找到替换位后面“大于替换位的最小值”（1234对应的34的替换位3之后大于替换位的最小值是4）  
+4.替换位替换后，把替换位之后的所有数据反转（得到比当前排列大的最小的序列），此处替换位之后是4，反转后还是4，最终结果是1234  
+5.不断寻找下一个排列，直到头  
+
+
 ```cpp
 #include<iostream>
 #include<stdio.h>
@@ -136,17 +149,6 @@ int main(){
 
 ```
 
-
-**非递归实现**：
-
-![全排列算法]()
-
-算法的思路：  
-1.不断寻找下一个排列（起始排列需要是从小到大，反过来的下面步骤比较要相反）例如：1234    
-2.从右边向左边寻找第一个升序（1234对应的是34），3所在的位置是替换位    
-3.从替换位开始从左往后找到替换位后面“大于替换位的最小值”（1234对应的34的替换位3之后大于替换位的最小值是4）  
-4.替换位替换后，把替换位之后的所有数据反转（得到比当前排列大的最小的序列），此处替换位之后是4，反转后还是4，最终结果是1234  
-5.不断寻找下一个排列，直到头  
 
 <https://blog.csdn.net/hackbuteer1/article/details/7462447#>  
 <https://blog.csdn.net/cpfeed/article/details/7376132>  
