--- a/_posts/2019-09-22-编程思维.md
+++ b/_posts/2019-09-22-编程思维.md
@@ -147,8 +147,69 @@ int main(){
     return 0;
 }
 
-```
+```  
 
+#### 给定字符串，输出可能的各种组合
+
+**递归方式**：  
+
+组合的方式那么根据长度可以有长度种方式（例如：“abc”有3种长度的组合），然后再每种长度里面从所有的元素里面选择所需的长度填充（按序填充，组合不需要顺序）。算法的**本质是“占坑”**，步骤大致如下：  
+1.选择组合长度  
+2.长度确定后，从头按序遍历字符串，每个字符都存在两种情况，被命中或者不被命中    
+3.当字符确定是否命中后继续往后面选择，直到选择满所需要的长度（这种方式是**没有剔除的重复**的）  
+
+```cpp
+#include<iostream>
+#include<string.h>
+#include<assert.h>
+#include<vector>
+
+void GetStringNumGroup(char* pSour,const int iNum,std::vector<char> &res){
+    assert(pSour);
+
+    if(iNum == 0){
+        static int iIndex = 1;
+        std::cout << "index " << iIndex++ << ":";
+
+
+        std::vector<char>::iterator iter = res.begin();
+        for(;iter != res.end();++iter){
+            std::cout << *iter;
+        }
+
+        std::cout << std::endl;
+        return;
+    }
+
+    if(*pSour == '\0'){ return; }
+
+    res.push_back(*pSour);
+    GetStringNumGroup(pSour + 1,iNum - 1,res);
+
+    res.pop_back();
+    GetStringNumGroup(pSour + 1,iNum,res);
+}
+
+void GetStringGroup(char* pSour){
+    assert(pSour);
+
+    std::vector<char> res;
+    int iLength = strlen(pSour);
+
+    for(int iNum = 1;iNum <= iLength;++iNum){
+        GetStringNumGroup(pSour,iNum,res);
+    }
+}
+
+int main(){
+
+    char arry[] = "113";
+    GetStringGroup(arry);
+
+    return 0;
+}
+
+```
 
 <https://blog.csdn.net/hackbuteer1/article/details/7462447#>  
 <https://blog.csdn.net/cpfeed/article/details/7376132>  
