--- a/_posts/2019-09-22-编程思维.md
+++ b/_posts/2019-09-22-编程思维.md
@@ -23,6 +23,150 @@ tags: 方法论
 
 动态规划算法思想（分治思想和解决冗余）：一个问题拆解各种`更小的相似的`子问题，子问题求解获得原问题解；子问题结果保存，同子问题再次出现无需再次求解，直接引用保存的子问题结果。
 
+#### 数组中数字超过一半的值（快速排序） 
+
+数据根据基准值（用于比较）划分，大于基准值的放右边，小于基准值的放左边（若不另开辟空间，例如数组是从左边往右找到第一个小于基准值的，从右边往左找到第一个大于基准值的，两个交换，直到左边的与右边的碰到一起）。继续从小于基准值的那部分和大于基准值的那部分分别再继续此操作。
+
+```cpp
+#include<iostream>
+#include<assert.h>
+
+template<class T>
+void SwapValue(T* v1,T* v2){
+    T tempValue = *v1;
+    *v1 = *v2;
+    *v2 = tempValue;
+}
+
+bool IsMoreThanHalf(int* pArry,int iLength,int iNum){
+    assert(pArry != NULL && iLength > 0);
+
+    int iTimes = 0;
+    for(int i = 0;i < iLength;++i){
+        if (pArry[i] == iNum){ ++iTimes; }
+    }
+
+    return iTimes > (iLength >> 1);
+}
+
+int* GetMiddlePointer(int* pLeft,int* pRight){
+    //left pointer more than half,right pointer less than half
+
+    int* iCmp = pLeft;
+    while(pLeft != pRight){
+        while(pLeft != pRight){ //从左往右找到第一个小于基准值的数
+            if (*pLeft > *iCmp){ break; }
+            ++pLeft;
+        }
+
+        while(pLeft != pRight){ //从右往左找到第一个大于基准值的数
+            if (*pRight <= *iCmp){
+                SwapValue(pLeft,pRight);
+               break;
+            }
+
+            --pRight;
+        }
+    }
+
+    return pLeft;
+}
+
+int GetMoreThanHalfNum(int* pArry,int iLength){
+    assert(pArry != NULL && iLength > 0);
+
+    int* pLeft = pArry;
+    int* pRight = pArry + iLength - 1;
+    int* pMid = GetMiddlePointer(pLeft,pRight);
+    while(pMid != (pArry + (iLength >> 1))){ //超过一半那么中间那个必定是数量是超过一半的
+        if(pMid > (pArry + (iLength >> 1))){
+            pRight = pMid;
+            pMid = GetMiddlePointer(pLeft,pRight - 1);
+        }
+        else{
+            pLeft = pMid;
+            pMid = GetMiddlePointer(pLeft + 1,pRight);
+        }
+    }
+
+    if (IsMoreThanHalf(pArry,iLength,*pMid)){
+        return *pMid;
+    }
+
+    return -1;
+}
+
+int main(){
+    int arry[] = {34,54,34,43,34,34,34,34,66,34};
+
+    int iRes = GetMoreThanHalfNum(arry,10);
+    std::cout << iRes << std::endl;
+
+    return 0;
+}
+
+```
+
+#### 从1到n整数1出现的次数  
+
+分治思想，计算各个位（个、十、百...）出现1的次数总和。拆分到各个位置之后就是找寻规律了，找寻规律的过程步骤清晰（意味着转化代码就容易）。例如n = 21345：  
+
+![数字分区]()  
+
+weight：当前的位（图中处于百位weight = 3）  
+base：当前位所处的基准值（图中base = 100）  
+round：当前位置填充1，可以有多少次轮循（图中round = 21）    
+former：当前位置之后的值（图中former = 45）  
+
+思路：  
+1.从个位开始往高位，图中是到了百位      
+2.固定weight轮循比如图中3，轮循需要100次3所处的位置才会变化  
+3.当weight所处的位置变化到指定值会有多少次轮循（先不考虑weight的，former已经在前面计算过，此时有round * base次）  
+4.再次考虑weight：  
+当weight = 1时，后面的1取决于former + 1（0 ~ former总数为：former - 0 + 1）；  
+当weight > 1时，后面可以超过base值让weight进位超过当前值  
+
+
+```cpp
+#include<iostream>
+
+int NumberOf1Between1AndN(int iNumber){
+    if (iNumber < 1){ return 0; }
+
+    int iCount = 0;
+    int iBase = 1;
+    int iRound = 0;
+    int iWeight = 0;
+    int iFormer = 0;
+
+    while(iNumber / iBase != 0){
+        iRound = iNumber / iBase / 10;
+        iWeight = iNumber / iBase % 10;
+        iFormer = iNumber - iNumber / iBase * iBase;
+
+        iCount += (iRound * iBase);
+        if (iWeight == 1){
+            iCount += (iFormer + 1);
+        }
+        else if (iWeight > 1){
+            iCount += iBase;
+        }
+
+        iBase *= 10;
+    }
+
+    return iCount;
+}
+
+int main(){
+    std::cout << NumberOf1Between1AndN(21345) << std::endl;
+    return 0;
+}
+
+``` 
+
+<https://blog.csdn.net/yi_afly/article/details/52012593#commentBox>
+
 #### 给定字符串，输出可能的各种排列
 
 **递归实现**：  
@@ -215,7 +359,7 @@ int main(){
 <https://blog.csdn.net/cpfeed/article/details/7376132>  
 
 
-### <span id = "list_2"></span>类兔乌龟赛跑思路  
+### <span id = "list_2"></span>类兔乌龟赛跑思路   
 
 类兔乌龟赛跑的思路就是2个对象先后跑的问题：  
 1.给定一个链表头结点如何判断是否有环及环的长度：    
@@ -360,67 +504,3 @@ int a = 11;
 a = a ^ a;  //结果为0
 
 
-
-```cpp  
-//排列递归实现
-#include<iostream>
-#include<stdio.h>
-#include<string.h>
-
-void swap(char* c_1,char*c_2){
-    if ((c_1 == NULL) || (c_2 == NULL) || (c_1 == c_2)){ return; }
-    char c_char = *c_1;
-    *c_1 = *c_2;
-    *c_2 = c_char;
-}
-
-bool IsSameRange(char* pBegin,char* pEnd){
-    for(char* ptr = pBegin;ptr < pEnd;++ptr){
-        if(*pBegin == *pEnd){
-            return false;
-        }
-    }
-
-    return true;
-}
-
-
-void GetStringArrange(const char* pSour,char* pTarg){
-    if (pSour == NULL || pTarg == NULL){ return; }
-
-    if (*pTarg == '\0'){
-        std::cout << pSour << std::endl;
-        return;
-    }
-
-    for(char *ptr = pTarg;*ptr != '\0';++ptr){
-        if (IsSameRange(pTarg,ptr)){
-            swap(pTarg,ptr);
-            GetStringArrange(pSour,pTarg + 1);
-            swap(pTarg,ptr);
-        }
-    }
-}
-
-void StringArrange(const char* pSour){
-    if (pSour == NULL){ return; }
-
-    char* temp = new char[strlen(pSour)];
-    strncat(temp,pSour,strlen(pSour));
-
-    GetStringArrange(temp,temp);
-
-    delete[] temp;
-    temp = NULL;
-}
-
-int main(){
-
-    char arry[4] = "bbc";
-//  StringArrange(arry);
-    GetStringArrange(arry,arry);
-
-
-    return 0;
-}
-```
