--- a/_posts/2019-09-22-编程思维.md
+++ b/_posts/2019-09-22-编程思维.md
@@ -111,7 +111,7 @@ int main(){
 
 分治思想，计算各个位（个、十、百...）出现1的次数总和。拆分到各个位置之后就是找寻规律了，找寻规律的过程步骤清晰（意味着转化代码就容易）。例如n = 21345：  
 
-![数字分区]()  
+![数字分区](https://github.com/smakry/smakry.github.io/raw/master/imags/%E6%95%B0%E5%AD%97%E5%88%86%E5%8C%BA.png)  
 
 weight：当前的位（图中处于百位weight = 3）  
 base：当前位所处的基准值（图中base = 100）  
