--- a/_posts/2019-09-22-编程思维.md
+++ b/_posts/2019-09-22-编程思维.md
@@ -126,6 +126,14 @@ former：当前位置之后的值（图中former = 45）
 当weight = 1时，后面的1取决于former + 1（0 ~ former总数为：former - 0 + 1）；  
 当weight > 1时，后面可以超过base值让weight进位超过当前值  
 
+步骤：  
+个位： 2134 * 1 + 1  
+十位： 213 * 10 + （= 0： + 0； = 1  + 后面 + 1；> 1  + base）  
+百位： 21 * 100 + （= 0： + 0； = 1  + 后面 + 1；）  
+.  
+.  
+.  
+
 
 ```cpp
 #include<iostream>
