--- a/_posts/2019-09-24-排序问题.md
+++ b/_posts/2019-09-24-排序问题.md
@@ -10,10 +10,74 @@ tags: 排序
 
 ## 目录  
 
-- [](#list_1)
+- [快速排序](#list_1)
+- [](#list_2)
 
 
 --- 
+
+### <span id = "liset_1"></span>快速排序  
+
+#### 给定整数数组拼接数组获得最小的数  
+
+例如给出{32,45,1,321,1623,3}最后得到1162332132345  
+问题1：数字拼接后超过数据类型可表示范围（大数问题）  
+问题2：使用快速排序排序字符数组（快排应用）  
+
+```cpp
+#include<iostream>
+#include<assert.h>
+#include<string.h>
+
+const int iLen = 10;
+
+int Compare(const void* v1,const void* v2){
+    char* str1 = new char[iLen];
+    char* str2 = new char[iLen];
+
+    strcpy(str1,*(char**)v1);  //void*需强制指定转化的类型
+    strcpy(str2,*(char**)v2);
+
+    strcat(str1,*(char**)v2);
+    strcat(str2,*(char**)v1);
+
+    int iRes = strcmp(str1,str2);
+
+    delete str1;
+    delete str2;
+
+    return iRes;
+}
+
+void CombineLeastArry(int *arry,size_t iLength){
+	assert(arry && iLength > 0);
+
+    char** newArry = new char*[iLength];
+    for(size_t i = 0;i < iLength;++i){
+        newArry[i] = new char[iLen];
+        sprintf(newArry[i],"%d",arry[i]);  //指定格式写入buff（newArry[i]）
+    }
+
+    qsort(newArry,iLength,sizeof(char*),Compare);
+
+    for(size_t i = 0;i < iLength;++i){
+        std::cout << newArry[i] << " ";
+        delete newArry[i];
+    }
+    std::cout << std::endl;
+
+    delete[] newArry;
+}
+
+int main(){
+    int arry[] = {32,45,1,321,1623,3};
+    CombineLeastArry(arry,6);
+
+    return 0;
+}
+
+```
+
 
 
 ### 百万整数中求最小的k个数？
