--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -48,6 +48,8 @@ tags: 笔记
 - [C++程序中调用被C语言编译过的函数，为什么要加extern "C"](#list_36)
 - [什么是深拷贝，什么是浅拷贝](#list_37)
 - [动态数组及二维数组](#list_38)
+- [函数默认参数](#list_39)
+- [实现一个简单String注意事项](#list_40)
 
 
 --- 
@@ -1138,7 +1140,13 @@ void main()
 
 ### <span id = "list_38"></span>动态数组及二维数组  
 
-`new和delete配对，new[]和delete[]配对`。此时的new跟类的new是一致的，可用默认构造初始化。
+<https://blog.csdn.net/cwcmcw/article/details/53873600>  
+
+`new和delete配对，new[]和delete[]配对`。此时的new跟类的new是一致的，可用默认构造初始化。  
+new使用delete[]失败，因为new是没有`偏移4字节(存放new出来的对象个数)`，如果使用delete[]会先偏移4字节找到大小来执行析构（这个时候超过实际的内存大小）  
+new[]时多分配了4个字节（存储实际分配的对象个数，`但内置类型或者无自定义的析构函数的类类型是不会多多4个字节`），new[]内嵌类型使用delete正常（内嵌类型不会向后偏移4个字节，此时使用delete可以正常找到存在对象的个数大小），但自定义类型使用delete时会偏移4个字节导致析构异常。  
+不管哪种情况，`配对是正确的选择`。    
+
 
 ```cpp
 #include "test.h"
@@ -1202,5 +1210,95 @@ a4:     100
 a4_2:   4153600
 */
 
+```  
+
+### <span id = "list_39"></span>函数默认参数  
+
+1.默认参数可视为默认值，当函数没有对应参时候会给出默认参数值（这就存在当重载了方法，参数个数不同也是重载，这种存在二义性不能确定调用的函数）。  
+2.默认参数后面的所有参数也必须是有默认参数  
+3.默认参数不能重复赋值，那么这种情况声明或者定义只能出现一次默认参数  
+
+```cpp  
+#include<iostream>
+
+void Print(int a = 1);
+void Print(int a = 1) { //错误，已在声明中赋值过
+}
+
+void Print2(int a = 1, int b) { //错误a是有默认参数的后面的参数中b没有默认参数
+}
+
+void Print3(int a, int b = 1) {}
+void Print3(int a) {} //这种重载二义了，如果调用Print3(10);此时不能确定要调用哪个
+
+int main(){
+    return 0;
+}
 ```
 
+### <span id = "list_40"></span>实现一个简单String注意事项  
+
+```cpp
+#include<iostream>
+#include<string.h>
+
+class String{
+public:
+    String(const char* str = NULL);  //只能有1次默认值赋值
+    String(const String& another);  //拷贝构造必须引用（非引用无限循环），const不能修改到原串
+    ~String(void);
+    String& operator=(const String& rhs); //引用类型参数，避免每次赋值都要调用拷贝构造函数进行复制
+    friend std::ostream& operator<<(std::ostream& os,const String& str); //作为友元方法，调用不需要对象
+    char* Get(void) const;
+private:
+    char* m_data;
+};
+
+String::String(const char* str){
+    if(str == NULL){ //空字符串是以'\0'结束的，至少有1个字符
+        m_data = new char[1];
+        m_data[0] = '\0';
+    }
+    else{
+        m_data = new char[strlen(str) + 1];  //strlen是不包括结束符'\0'
+        strcpy(m_data,str);  //strcpy是会把结束符也拷贝，strncpy是不会拷贝最后1个结束符
+    }
+}
+
+String::String(const String& another){
+    m_data = new char[strlen(another.Get()) + 1];
+    strcpy(m_data,another.Get());
+}
+
+String::~String(void){
+    delete[] m_data;  //析构时候此处是内置类型可以不需要[],但最好配对
+    m_data = NULL;  //内存析构后，指向的要赋值NULL
+}
+
+String& String::operator=(const String& rhs){
+    if(this != &rhs){ //当与当前的已经一致了就不需要再赋值了
+        delete[] m_data; //不同时候就说明需要重新分配内存空间，不管大小是否一致
+        m_data = new char[strlen(rhs.Get()) + 1];
+        strcpy(m_data,rhs.Get());
+    }
+
+    return *this;
+}
+
+char* String::Get(void) const{
+    return this->m_data;
+}
+
+std::ostream& operator<<(std::ostream& os,const String& str){
+    os << str.m_data;
+    return os;
+}
+
+int main(){
+    String str("hello");
+    std::cout << str << std::endl;
+    std::cout << str.Get() << std::endl;
+    return 0;
+}
+
+```
