--- a/_posts/2019-09-22-编程思维.md
+++ b/_posts/2019-09-22-编程思维.md
@@ -14,6 +14,9 @@ tags: 方法论
 - [类兔乌龟赛跑思路](#list_2)
 - [不使用第3变量交换2个值](#list_3)
 - [二进制异或特性](#list_4)
+- [贪心策略](#list_5)  
+- [分治策略]()
+- [回溯策略]()
 
 --- 
 
@@ -512,3 +515,6 @@ int a = 11;
 a = a ^ a;  //结果为0
 
 
+### <span id = "list_5"></span>贪心策略（“鼠目寸光”）  
+
+贪心策略：局限于当前的最优选择，忽略了全局的最优选择，“鼠目寸光”只看到眼前的。  
