--- a/_posts/2019-10-16-设计模式.md
+++ b/_posts/2019-10-16-设计模式.md
@@ -14,6 +14,11 @@ tags: 设计模式 阅读笔记
 
 - [设计模式的六大原则](#list_0)
 - [工厂模式](#list_1)
+- [单例模式](#list_2)
+- [建造者模式](#list_3)
+- [原型模式](#list_4)
+- [适配器模式](#list_5)
+- [桥接模式](#list_6)
 
 <https://www.jianshu.com/c/c3f6140b8315>  
 <https://www.cnblogs.com/chengjundu/p/8473564.html>  
@@ -275,6 +280,557 @@ int main(){
     myEngine = nullptr;
     delete myTire;
     myTire = nullptr;
+
+    return 0;
+}
+
+```  
+
+### <span id = "list_2"></span>单例模式  
+
+只能有一个`实例`，并且提供全局访问这个实例的接口  
+
+##### 2.1 懒汉单例模式（有需要再来）  
+
+只有有`用到的时候才会去实例化`  
+
+2.1.1 非线程安全的懒汉单例模式（`构造函数是私有的`，不能通过复制运算，拷贝构造等方式实例化对象）  
+
+```cpp  
+#include<iostream>
+
+class Boss{
+public:
+    static Boss* GetBoss(); //提供全局访问的接口
+    void PrintBossName();
+    ~Boss();
+private:
+    Boss(){} //构造函数是私有的
+    Boss(const Boss& boss) = delete;  //明确拒绝不能拷贝构造实例化
+    Boss& operator=(const Boss& boss) = delete; //明确拒绝不能复制运算实例化
+
+    static Boss* m_IsExist;
+    int m_bossId;
+};
+
+Boss* Boss::m_IsExist = nullptr;
+
+Boss* Boss::GetBoss(){ //此处无需再static
+    if(m_IsExist == nullptr){
+        m_IsExist = new Boss();
+    }
+
+    return m_IsExist;
+}
+
+void Boss::PrintBossName(){
+    std::cout << "Boss Name is xxx" << std::endl;
+}
+
+int main(){
+    Boss* boss = Boss::GetBoss();
+    Boss* boss2 = Boss::GetBoss();
+    boss2->PrintBossName();
+    delete boss2;
+//  boss->PrintBossName();  //同时指向析构后不能再使用实例
+//  delete boss;
+
+    return 0;
+}
+```  
+
+2.1.2 线程安全的懒汉单例模式（加锁实例化）  
+
+```cpp  
+#include<iostream>
+#include<mutex>
+
+std::mutex mt;
+
+class Boss{
+public:
+    static Boss* GetBoss();
+    void PrintBossName();
+    ~Boss(){}
+private:
+    Boss(){}
+    Boss(const Boss& boss) = delete;
+    Boss& operator=(const Boss& boss) = delete;
+
+    static Boss* m_IsExist;
+    int m_bossId;
+};
+
+Boss* Boss::m_IsExist = nullptr;
+
+Boss* Boss::GetBoss(){
+    if(m_IsExist == nullptr){
+        mt.lock(); //不存在时先加锁实例化
+
+        if(m_IsExist == nullptr){
+            m_IsExist = new Boss();
+        }
+
+        mt.unlock();
+    }
+
+    return m_IsExist;
+}
+
+void Boss::PrintBossName(){
+    std::cout << "Boss Name is xxx" << std::endl;
+}
+
+int main(){
+    Boss* boss = Boss::GetBoss();
+    boss->PrintBossName();
+//  delete boss;
+
+    return 0;
+}
+
+```  
+
+2.1.3 线程安全进阶（返回静态的引用，不再new返回，没有new也就不用delete）
+
+```cpp
+#include<iostream>
+
+class Boss{
+public:
+    static Boss& GetBoss();
+    void PrintBossName();
+    ~Boss(){}
+private:
+    Boss(){}
+    Boss(const Boss& boss) = delete;
+    Boss& operator=(const Boss& boss) = delete;
+    
+    static Boss* m_IsExist;
+    int m_bossId;
+};
+
+Boss* Boss::m_IsExist = nullptr;
+
+Boss& Boss::GetBoss(){
+    static Boss boss; //返回局部的静态引用类型
+    return boss;
+}   
+
+void Boss::PrintBossName(){
+    std::cout << "Boss Name is xxx" << std::endl;
+}   
+
+int main(){
+    Boss& boss = Boss::GetBoss();
+    boss.PrintBossName();
+
+    return 0;
+}
+```  
+
+##### 2.1 饿汉单例模式（先有了再说）  
+
+在单例类定义的时候就进行实例化（空间耗费，若请求多性能更好）  
+
+```cpp
+#include<iostream>
+
+class Boss{
+public:
+    static Boss* GetBoss();
+    void PrintBossName();
+    ~Boss(){}
+private:
+    Boss(){}
+    Boss(const Boss& boss) = delete;
+    Boss& operator=(const Boss& boss) = delete;
+
+    static Boss* m_IsExist;
+    int m_bossId;
+};
+
+Boss* Boss::m_IsExist = new Boss(); //先指定了boss，免得战火纷飞
+
+Boss* Boss::GetBoss(){
+    return m_IsExist;
+}
+
+void Boss::PrintBossName(){
+    std::cout << "Boss Name is xxx" << std::endl;
+}
+
+int main(){
+    Boss* boss = Boss::GetBoss();
+    boss->PrintBossName();
+
+    return 0;
+}  
+```  
+
+### <span id = "list_3"></span>建造者模式  
+
+到KFC吃东西（下单人），食物基本上是这样的（食品固定种类），你们选择套餐（A、B、C...套餐），让服务员去做这些食物（做出A、B、C...套餐）。  
+
+```cpp
+#include<iostream>
+#include<string>
+
+//固定的食物类
+class Food{
+public:
+    std::string m_strHamburg;
+    std::string m_Coke;
+
+public:
+    void SetHamburg(const std::string& food){
+        this->m_strHamburg = food;
+    }
+
+    const std::string& GetHamburg(){
+        std::cout << "This is " << m_strHamburg.data() << std::endl;
+        return m_strHamburg;
+    }
+
+    void SetCoke(const std::string& drink){
+        this->m_Coke = drink;
+    }
+
+    const std::string& GetCoke(){
+        std::cout << "This is " << m_Coke.data() << std::endl;
+        return m_Coke;
+    }
+};
+
+//抽象套餐类型
+class Package{
+public:
+    virtual ~Package(){ std::cout << "~Package" << std::endl; } //此处必须是virtual的，基类指针不能析构子类new出来的对象，只有virtual的才能调用到
+    virtual void PackageHamburg() = 0;
+    virtual void PackageCoke() = 0;
+    virtual Food* GetFood() = 0;
+};
+
+//具体的套餐A
+class Package_A : public Package{
+public:
+    Package_A(){ m_pFood = new Food(); } //给m_pFood赋值...
+    ~Package_A(){
+        delete m_pFood;
+        m_pFood = nullptr;
+    }
+
+    void PackageHamburg() override{
+        m_pFood->SetHamburg("BeefBurger");
+    }
+
+    void PackageCoke() override{
+        m_pFood->SetCoke("CocoCola");
+    }
+
+    Food* GetFood() override{
+        return m_pFood;
+    }
+private:
+    Food* m_pFood;
+};
+
+//具体的套餐B
+class Package_B : public Package{
+public:
+    Package_B(){ m_pFood = new Food(); }
+    ~Package_B(){
+        delete m_pFood;
+        m_pFood = nullptr;
+    }
+
+    void PackageHamburg() override{
+        m_pFood->SetHamburg("ChickenLeg");
+    }
+
+    void PackageCoke() override{
+        m_pFood->SetCoke("Pepsi");
+    }
+    }
+
+    Food* GetFood() override{
+        return m_pFood;
+    }
+private:
+    Food* m_pFood;
+};
+
+//服务员根据下单人的套餐需求做对应的套餐
+class Waiter{
+public:
+    Waiter(Package* pUserSelect):m_pUserSelect(pUserSelect){}
+    ~Waiter(){
+        //delete m_pUserSelect; //此处不需要再析构，只需要析构自己new出来的部分，此处只是指向的指针
+        m_pUserSelect = nullptr;
+    }
+
+    void MakeFood(){
+        m_pUserSelect->PackageHamburg();
+        m_pUserSelect->PackageCoke();
+    }
+private:
+    Package* m_pUserSelect;
+};
+
+int main(){
+    Package* myPackage = new Package_B(); //选择套餐-》B套餐
+    Waiter* waiter = new Waiter(myPackage); //服务员收到套餐订单
+    waiter->MakeFood(); //服务员做套餐
+
+    Food* myFood = myPackage->GetFood(); //取餐
+    myFood->GetHamburg();
+    myFood->GetCoke();
+
+    delete myPackage;
+    myPackage = nullptr;
+    delete waiter;
+    waiter = nullptr;
+    myFood = nullptr;
+
+    return 0;
+}
+
+```  
+
+### <span id = "list_4"></span>原型模式（车很贵，大家一起开，买不起那么多车）  
+
+new对象繁杂，且用起来差不多，就用原型模式（车少买，怎么用手动自动开你们随意）  
+
+```cpp
+ #include<iostream>
+ #include<string>
+ 
+ class Clone{
+ public:
+     virtual Clone* Cloning() = 0;
+     virtual void Show() = 0;
+ };
+ 
+ class Car : public Clone{
+ public:
+     Car(int carId,std::string carName):m_carId(carId),m_carName(carName){}
+     ~Car(){}
+ 
+     Car(const Car& obj){ //关键拷贝构造函数
+         this->m_carId = obj.m_carId;
+         this->m_carName = obj.m_carName;
+     }
+ 
+     Clone* Cloning() override{ //关键返回当前对象的拷贝
+         return new Car(*this);
+     }
+ 
+     void Show() override{
+         std::cout << "id:" << m_carId << " name:" << m_carName << std::endl;
+     }
+ 
+ private:
+     int m_carId;
+     std::string m_carName;
+ };
+ 
+ 
+ int main(){
+     Clone* BMW = new Car(888888,"BMW");
+     BMW->Show();
+ 
+     Clone* BMW2 = BMW->Cloning();
+     BMW2->Show();
+ 
+     delete BMW;
+     BMW = nullptr;
+     delete BMW2;
+     BMW2 = nullptr;
+ 
+     return 0;
+ }
+```  
+
+### <span id = "list_5"></span>适配器模式
+
+讲一个类的接口转化成客户端希望的接口（你都已经是这样了，改不了，改不了我们就适应你）  
+
+##### 5.1 复合（组合）实现适配器（把你拿来为我用，我去做）
+
+```cpp
+#include<iostream>
+
+class Deque{
+public:
+    void push_back(int x){ std::cout << "push_back" << std::endl; }
+    void push_front(int x){ std::cout << "push_front" << std::endl; }
+    int pop_back(){
+        std::cout << "pop_back return element" << std::endl;
+        return 1;
+    }
+    int pop_front(){
+        std::cout << "poo_front return element" << std::endl;
+        return 1;
+    }
+};  
+
+class Sequence{
+public:
+    virtual void push(int x) = 0;
+    virtual int pop() = 0;
+};
+
+//适配栈的用法，客户端只能看到Stack，不能看到Deque
+class Stack : public Sequence{
+public:
+    void push(int x) override{
+        m_deque.push_front(x);
+    }
+
+    int pop() override{
+        return m_deque.pop_front();
+    }
+
+private:
+    Deque m_deque; //把你拿来为我所用
+};
+
+class Queue : public Sequence{
+public:
+    void push(int x) override{
+        m_deque.push_back(x);
+    }
+
+    int pop() override{
+        return m_deque.pop_front();
+    }
+private:
+    Deque m_deque;
+};
+
+int main(){
+    return 0;
+}
+```  
+
+##### 5.2 继承实现适配器（继承你的所有家产，根据消费需求多赚点还是花少点）  
+
+家产继承只有你知道你继承了多少家产，别人不能让别人知道（私有继承）
+
+```cpp
+#include<iostream>
+
+class Deque{
+public:
+    void push_back(int x){ std::cout << "push_back" << std::endl; }
+    void push_front(int x){ std::cout << "push_front" << std::endl; }
+    int pop_back(){
+        std::cout << "pop_back return element" << std::endl;
+        return 1;
+    }
+    int pop_front(){
+        std::cout << "poo_front return element" << std::endl;
+        return 1;
+    }
+};
+
+class Sequence{
+public:
+    virtual void push(int x) = 0;
+    virtual int pop() = 0;
+};
+
+class Stack : public Sequence,private Deque{ //私有继承Deque
+public:
+    void push(int x) override{
+        push_front(x);
+    }
+
+    int pop() override{
+        return pop_front();
+    }
+};
+
+class Queue : public Sequence,private Deque{
+public:
+    void push(int x) override{
+        push_back(x);
+    }
+
+    int pop() override{
+        return pop_front();
+    }
+};
+
+int main(){
+    return 0;
+}
+
+```  
+
+### <span id = "list_6"></span>桥接模式（零件我都有，你想要什么功能机器我给你组装）  
+
+零件就是抽象的部分，组装就是实现部分（怎么组装就是桥接）  
+
+```cpp
+#include<iostream>
+
+class App{
+public:
+    virtual ~App(){}
+    virtual void Run() = 0;
+};
+
+class GameApp : public App{
+public:
+    void Run() override{ std::cout << "This Run Game App" << std::endl; }
+};
+
+class EduApp: public App{
+public:
+    void Run() override{ std::cout << "This Run Education App" << std::endl; }
+};
+
+class Phone{
+public:
+    virtual ~Phone(){}
+    virtual void RunApp(App* app) = 0; //实现App与Phone桥接
+};
+
+class HuaweiPhone : public Phone{
+public:
+    void RunApp(App* app) override{
+        std::cout << "Huawei Run App" << std::endl;
+        app->Run();
+    }
+};
+
+class XiaomiPhone : public Phone{
+public:
+    void RunApp(App* app) override{
+        std::cout << "Xiaomi Run App" << std::endl;
+        app->Run();
+    }
+};
+
+int main(){
+    Phone* huawei = new HuaweiPhone();
+    Phone* xiaomi = new XiaomiPhone();
+    App* gameapp = new GameApp();
+    App* eduapp = new EduApp();
+
+    huawei->RunApp(gameapp);
+    huawei->RunApp(eduapp);
+    xiaomi->RunApp(eduapp);
+
+    delete huawei;
+    huawei = nullptr;
+    delete xiaomi;
+    xiaomi = nullptr;
+    delete gameapp;
+    gameapp = nullptr;
+    delete eduapp;
+    eduapp = nullptr;
 
     return 0;
 }
