--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -50,6 +50,8 @@ tags: 笔记
 - [动态数组及二维数组](#list_38)
 - [函数默认参数](#list_39)
 - [实现一个简单String注意事项](#list_40)
+- [构造函数的变量初始化顺序](#list_41)
+- [C++四种类型转换](#list_42)
 
 
 --- 
@@ -1301,4 +1303,129 @@ int main(){
     return 0;
 }
 
+```  
+
+### <span id = "list_41"></span> 构造函数的变量初始化顺序（按照变量的声明顺序初始化）  
+
+```cpp
+class A{
+public:
+	A() : m_c(0),m_a(m_c + 1),m_b(m_a + 1){}
+	void print(){ std::cout << m_a << " " << m_b << " " << m_c << std::endl; }
+private:
+	int m_a;
+	int m_b;
+	int m_c;
+}; 
+
+int main() {
+	A a;
+	a.print(); //输出结果并不是1 2 0 ，按照声明顺序，m_c最后所以是m_a中m_c是未初始化的随机值
+
+	return 0;
+}
+
+```  
+
+### <span id = "list_42"></span> C++四种类型转换  
+
+C风格的强制类型转换均用 Type b = (Type)a； 形式转换。而C++有4种类型转换的`操作符`:  
+
+- 去const和volatile属性用const_cast  
+- 基本类型转换用static_cast  
+- 多态类型之间的转换用dynamic_cast  
+- 不同类型之间的转换用reinterpret_cast  
+
+#### 1.const_cast（去掉类型的const或volatile属性）  
+
+const int a = 10;  
+int* b = const_cast<int*>(&a);  //const int* 转化为 int*，去掉const属性
+
+#### 2.static_cast（无条件转换，静态类型转换、可看做C类型的转换）
+
+- 基类与子类之间的转换：`子类转成基类安全`的（多态中的应用及这种转化）；基类转成子类的不安全的（并没有子类的成员，因为基类没有子类的成员无法赋值，`但是成员方法还是有`的）；基类与子类之间的转换用dynamic_cast比较好  
+- 基本数据类型转换enum，struct，int，char，float等。但`不能进行无关类型指针之间的转换`（比如非基类和子类的关系之间的转换就是错的）  
+- 把任何类型的表达式转换成void类型  
+- `static_cast不能去掉类型的const或volatile属性`（用const_cast转换）  
+
+```cpp
+#include<iostream>
+
+int main(){
+    enum{
+        nihao = 1,
+        dajiahao
+    };
+    int a = static_cast<int>(dajiahao); //enmu类型转换，nihao和dajiahao都可看做变量
+
+    int b = 10;
+    double c = static_cast<double>(b);
+
+    int* p = &b;
+    void* d = static_cast<void*>(p);//转成void*
+
+    double* e = static_cast<double*>(p);//错误的，double*指向的是double类型，int*指向int两个是不相关
+
+    return 0;
+}
+```
+
+#### 3.dynamic_cast（有条件转换，动态类型转换，运行时检查类型安全，转换失败返回NULL）  
+
+- 安全的基类和子类之间的转换  
+- `必须有虚函数`  
+- 相同基类不同子类之间的交叉转换允许，但结果返回NULL  
+
+```cpp
+#include<iostream>
+
+class Father{
+public:
+    virtual void print(){}
+private:
+    int m_father;
+};
+
+class Son : public Father{
+public:
+    void sonPrint(){ std::cout << "this is sonprint" << std::endl; }
+    int m_son = 11;
+};
+
+int main(){
+    Father* fa = static_cast<Father*>(new Son());//子类-》基类static_cast转化正常
+    Father* fa2 = dynamic_cast<Father*>(new Son());//子类-》基类dynamic_cast正常
+
+    Son* so = static_cast<Son*>(new Father());
+    so->sonPrint();//基类-》子类static_cast，此时是有子类成员方法的（无需成员赋值）
+    std::cout << so->m_son << std::endl;//基类-》子类static_cast，成员未赋值，是默认值0
+    
+    Son* so2 = dynamic_cast<Son*>(new Father());
+    so2->sonPrint();//基类-》子类dynamic_cast，此时是有子类成员方法的（无需成员赋值）
+//  std::cout << so2->m_son << std::endl;//基类-》子类dynamic_cast动态检查，此时返回NULL，不能输出NULL类型
+    
+    return 0;
+}
+
+```
+
+#### 4.reinterpret_cast（仅重新解释类型，但没有进行二进制的转换）  
+
+- 转化的类型必须是一个指针、引用、算数类型、函数指针或者成员指针
+- 可以把一个指针转成整数，也可以把整数转成指针，但不能将非32bit的实例转成指针
+- 很难保证移植性  
+
+```cpp
+#include<iostream>
+
+int print(){ return 0; }
+
+int main(){
+    typedef void (*func)();
+    func arryfunc[5];
+//  arryfunc[0] = &print;//print是返回值int的与func类型不匹配，赋值错误   
+    arryfunc[0] = reinterpret_cast<func>(&print);//转化不同类型正确
+
+    return 0;
+}
 ```
