--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -1277,19 +1277,34 @@ String::~String(void){
     m_data = NULL;  //内存析构后，指向的要赋值NULL
 }
 
+//内存分配失败异常
 String& String::operator=(const String& rhs){
     if(this != &rhs){ //当与当前的已经一致了就不需要再赋值了
         delete[] m_data; //不同时候就说明需要重新分配内存空间，不管大小是否一致
-        m_data = new char[strlen(rhs.Get()) + 1];
+        m_data = new char[strlen(rhs.Get()) + 1];//这种方式当分配内存异常赋值失败
         strcpy(m_data,rhs.Get());
     }
 
     return *this;
 }
 
+/*
+//考虑内存分配（采用内存交换，局部变量调用结束及析构）
+String& String::operator=(const String& rhs){
+	if(this != &rhs){
+		String tempStr(rhs);
+		char* tmp = this->m_data;
+		this->m_data = tempStr.m_data;
+		temStr.m_data = tmp;//交换了内存地址，调用结束析构了，不存在内存分配问题
+	}
+	
+	return *this;
+}
+
 char* String::Get(void) const{
     return this->m_data;
 }
+*/
 
 std::ostream& operator<<(std::ostream& os,const String& str){
     os << str.m_data;
