--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -349,7 +349,7 @@ int main(){
 size_t strlen ( const char * str );  
 
 - sizeof是`操作符`，strlen是库函数  
-- sizeof的参数可以是数据类型也可以是变量；而strlen只能是以'\0'结尾的字符串作为参数（以参数的值为首地址，`遇到第一个'\0'的长度`）  
+- sizeof的参数可以是数据类型也可以是变量；而strlen只能是以'\0'结尾的字符串作为参数（以参数的值为首地址，`遇到第一个'\0'的长度`，C/C++字符串都是以'\0'结尾）  
 - 编译器在`编译的时候`就计算出了sizeof的结果，sizeof计算的是数据类型占内存的大小；strlen是在`运行的时候`才能算出，计算的是字符串的长度  
 - 数据传递给sizeof不会退化；传递给strlen会退化为指针（`strlen是函数，函数形参里面的数据会退化为指针`）
 
@@ -384,7 +384,8 @@ arry2:44
 
 malloc/free和new/delete都可以用来动态分配内存  
 - malloc/free是C语言用来动态分配内存和释放的`函数`（需要库文件#include<stdlib.h>），malloc向堆申请一块内存，malloc需要`手动计算字节数`，成功`返回void指针`（void*表示不确定类型的指针，可以强制转化），这块内存不使用时通过free释放，并把指向这块内存的指针设为NULL  
-- new/delete是C++用来为某一个数据类型对象分配内存的`操作符`，可以被重载。new从堆申请内存成功后返回`指向具体数据类型的指针`，new可以`自动计算`需要分配的内存空间。new在为类对象申请内存空间会去调用类的构造函数，在delete释放会调用析构函数
+- new/delete是C++用来为某一个数据类型对象分配内存的`操作符`，可以被
+- 重载。new从堆申请内存成功后返回`指向具体数据类型的指针`，new可以`自动计算`需要分配的内存空间。new在为类对象申请内存空间会去调用类的构造函数，在delete释放会调用析构函数
 
 #### 用new创建，用free回收会产生什么影响？  
   
@@ -1018,7 +1019,7 @@ int main(){
 利用二叉树的层次遍历和深度遍历。  
 
 - 层次遍历：每一层都是2^(n-1)个数据，利用这个特性对每个节点编号，例如根节点是n，那么左子树跟节点是2n，右节点是2n+1
-- 深度遍历：保存二叉树的前序遍历和中序遍历（这2个可以唯一确认一颗二叉树，有后续遍历的不能唯一确认）  
+- 深度遍历：保存二叉树的前序遍历和中序遍历（这2个可以唯一确认一颗二叉树，有后续遍历的不能唯一确认，例如后续遍历{2，1}根节点1，节点2可以左也可以右）  
 
 ### <span id = "list_35"></span>函数参数传递相关  
 
@@ -1358,7 +1359,7 @@ int* b = const_cast<int*>(&a);  //const int* 转化为 int*，去掉const属性
 
 #### 2.static_cast（无条件转换，静态类型转换、可看做C类型的转换）
 
-- 基类与子类之间的转换：`子类转成基类安全`的（多态中的应用及这种转化）；基类转成子类的不安全的（并没有子类的成员，因为基类没有子类的成员无法赋值，`但是成员方法还是有`的）；基类与子类之间的转换用dynamic_cast比较好  
+- 基类与子类之间的转换：`子类转成基类安全`的（多态中的应用及这种转化）；基类转成子类的不安全的（并没有子类的成员，因为基类没有子类的成员无法赋值，`但是成员方法还是有`的，成员函数是存放在代码区的不管是全局函数还是成员函数）；基类与子类之间的转换用dynamic_cast比较好  
 - 基本数据类型转换enum，struct，int，char，float等。但`不能进行无关类型指针之间的转换`（比如非基类和子类的关系之间的转换就是错的）  
 - 把任何类型的表达式转换成void类型  
 - `static_cast不能去掉类型的const或volatile属性`（用const_cast转换）  
