--- a/_posts/2019-09-24-排序问题.md
+++ b/_posts/2019-09-24-排序问题.md
@@ -11,7 +11,7 @@ tags: 排序
 ## 目录  
 
 - [快速排序](#list_1)
-- [](#list_2)
+- [堆排序](#list_2)
 
 
 --- 
@@ -83,3 +83,7 @@ int main(){
 ### 百万整数中求最小的k个数？
 1. 数据大小是多少，如果数据上限较少可以利用计数排序来求出k个数。时间复杂度O(n)，但是需要用到额外的空间，数据范围比较小情况下效率比较高。
 2. 利用快速排序的思想，因为每次快排都会把一个序列分成两个部分，我们可以利用这个思想找出前k个小的数(和找第k小的数是一样的道理)。时间复杂度O(n)，不需要额外的空间，如果数据量大的话平均情况下比较快。
+
+### <span id = "liset_2"></span>堆排序  
+
+最大堆（根元素是最大的）、最小堆（根元素最小），每次取出堆顶元素，都是在建堆过程。`堆使用数组保存`。  
