--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -8,7 +8,7 @@ tags: 网络 阅读笔记
 
 > 网络=》协议=》数据交换而建立的规则或标准（网络协议或者说是约定的集合 eg:语言）
 
-网路把主机连接起来，互联网是把多种不同的网络连接起来（互联网是网络的网络）。  
+网络把主机连接起来，互联网是把多种不同的网络连接起来（互联网是网络的网络）。  
 <https://baijiahao.baidu.com/s?id=1620169126251822734&wfr=spider&for=pc>
 
 ### OSI七层网络模型
