--- a/_posts/2019-09-22-编程思维.md
+++ b/_posts/2019-09-22-编程思维.md
@@ -514,6 +514,12 @@ a = a ^ 123 ^ 123;  //结果为a
 int a = 11;
 a = a ^ a;  //结果为0
 
+3.一个数据(A-1) & A的结果相当于把A二进制中最右边的1变成0  
+例如： 1100  
+-1  = 1011  
+&	= 1000（第2位变0）  
+-1	= 0111  
+&	= 0000（第1位变0）   
 
 ### <span id = "list_5"></span>贪心策略（“鼠目寸光”）  
 
