--- a/_posts/2019-09-18-C内存管理.md
+++ b/_posts/2019-09-18-C内存管理.md
@@ -8,7 +8,7 @@ tags: 内存管理 阅读笔记
 
 > 什么时候用栈什么时候用堆？
 
-操作系统管理内存最小单位是内存页（32位操作系统一版是4k大小）非字节。内存页越大，内存浪费的概率越大（申请的内存大小低于4k且多），不用频繁分配和释放内存；内存页越小，虽然浪费少，但是操作系统内存调度效率低（频繁处理）。内存有限，程序设计中C是如何做到内存管理？
+操作系统管理内存最小单位是内存页（32位操作系统一般是4k大小）非字节。内存页越大，内存浪费的概率越大（申请的内存大小低于4k且多），不用频繁分配和释放内存；内存页越小，虽然浪费少，但是操作系统内存调度效率低（频繁处理）。内存有限，程序设计中C是如何做到内存管理？
 
 ### 基本的一些概念  
 
@@ -63,7 +63,7 @@ void main(){
 运行结果：
 block address a:26858<u>76</u> b:26858<u>64</u>  //a的地址比b的小（地址不同于实参，值拷贝）
 global address n:17146168 m:17146172  //静态区按先后地址从小到达
-address a:26856<u>48</u> b:26856<u>52</u>   //a的地址比b的大
+address a:26856<u>48</u> b:26856<u>52</u>   //b先入栈，处于高地址比a的地址大
 function address test:17109617 main:17109677  //函数默认是全局也在静态区
 
 ```  
