--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -20,7 +20,7 @@ tags: 笔记
 - [友元类友元函数](#list_8)
 - [C++多态的概念和实现机制](#list_9)
 - [虚函数是如何实现多态机制](#list_16)
-- [构造函数和虚构函数能否为虚函数](#list_29)
+- [构造函数和析构函数能否为虚函数](#list_29)
 - [堆栈的区别](#list_10)
 - [sizeof和strlen区别](#list_11)
 - [C的malloc和C++的new的区别](#list_12) 
@@ -63,7 +63,7 @@ tags: 笔记
 - 平台原因（移植）：不是所有的硬件平台都能访问`任意地址上`的任意数据，某些硬件平台只能在某些地址处取某些特定类型的数据，否则抛出硬件异常。  
 - 性能问题：数据结构（尤其是栈）应该尽可能地在自然边界上对齐。原因在于，为了访问未对齐的内存，处理器需要作两次内存访问，而对齐的内存`只需要访问一次`。  
  
-#### 结构体内存对齐要求：  
+#### 结构体内存对齐要求（从起始内存地址偏移而来，那么当前变量的偏移量必须是当前变量的倍数）：  
 
 <https://blog.csdn.net/weixin_40853073/article/details/81451792>
 
@@ -129,7 +129,7 @@ struct size :72
 - 定义虚函数为了允许基类指针来调用子类的这个函数  
 - 定义为`纯虚函数才代表函数没有被实现`  
 - 虚函数类似一个规范，告诉继承于他的子类必须实现它（这个虚函数是一个接口）  
-- 类函数调用不是在编译时候确定，而是在`运行时候确定`（“动态联编”或“推迟联编”）。虚函数的虚在于编写时候不知道是调用基类的函数还是子类的。  
+- 虚函数调用不是在编译时候确定，而是在`运行时候确定`（“动态联编”或“推迟联编”）。虚函数的虚在于编写时候不知道是调用基类的函数还是子类的。  
 - 虚函数是c++用于实现多态（Polymorphism）的机制，核心理念就是`通过基类访问派生类定义的函数`  
 - 有`动态分配堆上内存`的时候，析构函数`必须是虚函数`，但没有必要是纯虚函数。（删除一个`基类指针`的时候，c++不管这个指针指向一个基类对象还是一个派生类对象，调用的都是`基类的析构函数`,这种情况依赖派生类析构的资源不会被析构，资源泄露 <https://blog.csdn.net/qq826364410/article/details/88914802>）
 
@@ -375,7 +375,7 @@ int main(){
 
 运行结果：
 sizeof:1	10
-strlen:2	7      //strlen(&a)不是1
+strlen:2	7      //strlen(&a)不是1，碰到第1个'\0'不一定是b
 arry2:44
 
 ```  
@@ -384,8 +384,7 @@ arry2:44
 
 malloc/free和new/delete都可以用来动态分配内存  
 - malloc/free是C语言用来动态分配内存和释放的`函数`（需要库文件#include<stdlib.h>），malloc向堆申请一块内存，malloc需要`手动计算字节数`，成功`返回void指针`（void*表示不确定类型的指针，可以强制转化），这块内存不使用时通过free释放，并把指向这块内存的指针设为NULL  
-- new/delete是C++用来为某一个数据类型对象分配内存的`操作符`，可以被
-- 重载。new从堆申请内存成功后返回`指向具体数据类型的指针`，new可以`自动计算`需要分配的内存空间。new在为类对象申请内存空间会去调用类的构造函数，在delete释放会调用析构函数
+- new/delete是C++用来为某一个数据类型对象分配内存的`操作符`，可以被重载。new从堆申请内存成功后返回`指向具体数据类型的指针`，new可以`自动计算`需要分配的内存空间。new在为类对象申请内存空间会去调用类的构造函数，在delete释放会调用析构函数
 
 #### 用new创建，用free回收会产生什么影响？  
   
@@ -400,7 +399,7 @@ char * strncpy ( char * destination, const char * source, size_t num );
 void * memset ( void * ptr, int value, size_t num ); //Fill block of memory（内存块前num用value填充，value转化为unsigned char）  
 
 - strcpy只能用于复制字符串，memcpy可以用来复制任意的内容  
-- strcpy复制不需要指定长度但遇到'\0'时马上结束，memcpy需要指定长度  
+- strcpy复制不需要指定长度但`遇到'\0'时马上结束`，memcpy需要指定长度  
 
 ### <span id = "list_14"></span>memcpy和memmove区别  
 
@@ -417,8 +416,8 @@ memcpy和memmove的作用都是从source区域复制一定大小的内容到dest
 typedef int my_int;  
 int typedef my_int;  
 	- typedef定义的新类型使用时候`省略括号`，例如以下两种（效果一致）:  
-typedef int my_int;
-my_int a = 10;
+typedef int my_int;  
+my_int a = 10;  
 my_int(a) = 10;   
 
     - typedef快速解析（拿掉typedef剩下的原来表示的含义是啥，然后再把原来的变量名拿来作为新类型），例如：  
@@ -757,7 +756,7 @@ int main(){
     - 基类的重载操作符
     - 基类的友元函数（非成员函数）  
 
-- 多继承（环装继承）导致基类对象创建多次，使用虚拟（virtual）继承（在创建对象的时候会创建一个虚表），此时基类对象只会创建一次。  
+- 多继承（环状继承）导致基类对象创建多次，使用虚拟（virtual）继承（在创建对象的时候会创建一个虚表），此时基类对象只会创建一次。  
 
 ```cpp
 #include<iostream>
@@ -940,7 +939,7 @@ set的`底层实现方式为红黑树`。内部实现中set不同于map是key-va
 2.`指向释放后的内存`：指针指向的内存被释放了，但是指针没有置为NULL此时指针还被看做是合法的，这种情况的释放后要置NULL（例如delete或者free释放的内存）  
 3.指向了`作用范围外`的内存：例如函数调用栈里面的指针，函数调用结束栈即被释放，外面指针指向函数栈的指针即超出了范围  
 
-### <span id = "list_29"></span>构造函数和虚构函数能否为虚函数  
+### <span id = "list_29"></span>构造函数和析构函数能否为虚函数  
 
 1.构造函数不可以是虚函数：虚函数要求每个对象都有指向虚函数表的指针，对象都还没有被构造好就存在这个指针  
 2.析构函数可以是虚函数：当基类指针指向了子类对象，如果析构函数不是虚函数，那么此时释放的只是基类的内存，无法调用到子类的析构函数，子类内存无法释放，此时出现内存泄露  
@@ -1147,7 +1146,7 @@ void main()
 
 `new和delete配对，new[]和delete[]配对`。此时的new跟类的new是一致的，可用默认构造初始化。  
 new使用delete[]失败，因为new是没有`偏移4字节(存放new出来的对象个数)`，如果使用delete[]会先偏移4字节找到大小来执行析构（这个时候超过实际的内存大小）  
-new[]时多分配了4个字节（存储实际分配的对象个数，`但内置类型或者无自定义的析构函数的类类型是不会多多4个字节`），new[]内嵌类型使用delete正常（内嵌类型不会向后偏移4个字节，此时使用delete可以正常找到存在对象的个数大小），但自定义类型使用delete时会偏移4个字节导致析构异常。  
+new[]时多分配了4个字节（存储实际分配的对象个数，`但内置类型或者无自定义的析构函数的类类型是不会多偏移4个字节`），new[]内嵌类型使用delete正常（内嵌类型不会向后偏移4个字节，此时使用delete可以正常找到存在对象的个数大小），但自定义类型使用delete时会偏移4个字节导致析构异常。  
 不管哪种情况，`配对是正确的选择`。    
 
 
